turned all bootstrap buttons to css buttons

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <link rel="icon" href="<%= BASE_URL %>persona_card.ico">
     <title></title>
     <style>
-
+      body {
+        overflow: scroll;
+      }
     </style>
   </head>
   <body>
